add page numbers

--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -1,1 +1,13 @@
-<p>numeros works!</p>
+<div class="text-layout">
+  <h1>Pipes numeros, DecimalPipe y Porcentaje</h1>
+  <p>Pipes incluidos en Angular - usualmente en el ComomModule</p>
+</div>
+
+<div class="gri">
+  <div class="col-4">
+    <p-card header="Ventas netas" subheader="Del presente anio">
+      <i class="pi pi-dollar"></i>
+      {{ ventasNetas | number: "1.6-6" }}
+    </p-card>
+  </div>
+</div>
