--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -3,11 +3,31 @@
   <p>Pipes incluidos en Angular - usualmente en el ComomModule</p>
 </div>
 
-<div class="gri">
+<div class="grid">
   <div class="col-4">
     <p-card header="Ventas netas" subheader="Del presente anio">
       <i class="pi pi-dollar"></i>
       {{ ventasNetas | number: "1.6-6" }}
+    </p-card>
+  </div>
+
+  <div class="col-4">
+    <p-card header="Ventas brutas" subheader="Del presente anio">
+      <!-- simbolo moneda / simbolo dinero / numero de decimales -->
+      {{ ventasNetas | currency: "CAD":"symbol-narrow":"1.4-4" }}
+    </p-card>
+  </div>
+
+  <div class="col-4">
+    <p-card header="Ventas brutas" subheader="Del presente anio">
+      {{ ventasNetas | currency: "CAD":"symbol-narrow":"1.4-4" }}
+    </p-card>
+  </div>
+
+  <div class="col-4">
+    <p-card header="Margen ganancias (%)" subheader="Del presente anio">
+      <!-- {{ ventasNetas | currency: "CAD":"symbol-narrow":"1.4-4" }} -->
+      {{ porcentaje | percent: "2.2-4" }}
     </p-card>
   </div>
 </div>
