--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,1 +1,96 @@
-<p>no-comunes works!</p>
+<div class="text-layout">
+  <h1>DecimalPipe & Porcentaje 😀</h1>
+  <p>Pipes incluidos en Angular - usualmente en el ComomModule</p>
+</div>
+
+<div class="grid">
+  <div class="col md-6 sm-9">
+    <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+      Saludos {{ nombre }}, es un placer
+      {{ genero | i18nSelect: invitacionMapa }} a nuestro evento
+      <hr />
+
+      <button
+        pButton
+        type="button"
+        label="Cambiar a Susana"
+        class="p-button-info"
+        (click)="cambiarASuasana()"
+      ></button>
+      <button
+        pButton
+        type="button"
+        label="Cambiar a Jose"
+        class="p-button-info"
+        (click)="cambiarAJose()"
+      ></button>
+    </p-fieldset>
+  </div>
+
+  <div class="col md-6 sm-9">
+    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+      Actualmente tenemos
+      {{ clientes.length | i18nPlural: clientesMap }} cliente esperando
+    </p-fieldset>
+
+    <button
+      pButton
+      type="button"
+      label="borrar cliente"
+      class="p-button-info"
+      (click)="borrarCliente()"
+    ></button>
+    <button
+      pButton
+      type="button"
+      label="crear cliente"
+      class="p-button-warning"
+      (click)="crearCliente()"
+    ></button>
+  </div>
+
+  <div class="col md-6">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <b>Original</b>
+      <span *ngFor="let cliente of clientes">{{ cliente }} </span>
+      <pre>{{ clientes }}</pre>
+
+      <hr />
+      <b>slice:0:2</b>
+      <pre>{{ clientes | slice: 0:2 }}</pre>
+
+      <hr />
+      <b>slice:1:2</b>
+      <pre>{{ clientes | slice: 1:2 }}</pre>
+
+      <hr />
+      <b>slice:1:3</b>
+      <pre>{{ clientes | slice: 1:2 }}</pre>
+    </p-fieldset>
+  </div>
+
+  <div class="col md-6">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <ul>
+        <!-- <li *ngFor="let key of persona | keyvalue">{{ key | json }}</li> -->
+        <li *ngFor="let key of persona | keyvalue">
+          {{ key.key | titlecase }} : {{ key.value }}
+        </li>
+      </ul>
+    </p-fieldset>
+  </div>
+
+  <div class="col md-6 sm-9">
+    <p-fieldset legend="JSON Pipe" [toggleable]="true">
+      <pre>{{ heroes | json }}</pre>
+    </p-fieldset>
+  </div>
+
+  <div class="col md-6 sm-9">
+    <p-fieldset legend="ASYNC Pipe" [toggleable]="true">
+      <pre>{{ miObsevable | async }}</pre>
+      <pre *ngIf="!(valorPromesa | async)">Cargando info</pre>
+      <pre>{{ valorPromesa | async }}</pre>
+    </p-fieldset>
+  </div>
+</div>
